Added english stdout and adjusted gradle files