@@ -1,16 +1,12 @@
 plugins {
-    kotlin("jvm")
     application
+    kotlin("jvm")
+    id("com.github.johnrengelman.shadow")
     id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 dependencies {
     implementation(kotlin("stdlib"))
-    
-    javafx {
-        version = "21"
-        modules = listOf("javafx.controls", "javafx.fxml")
-    }
 }
 
 application {
@@ -22,16 +18,7 @@ application {
     )
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-// Для Windows (чтобы не было проблем с JavaFX)
-tasks.named<JavaExec>("run") {
-    jvmArgs = listOf(
-        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-        "-Dprism.order=sw"
-    )
+javafx {
+    version = "21"
+    modules = listOf("javafx.controls", "javafx.fxml")
 }
